--- a/index.html
+++ b/index.html
@@ -14,24 +14,23 @@
         <div class="header-wrapper">
             <div class="logo">
                 <!-- Start Header Logo -->
-                 <a href="home.html" class="header-logo">
+                 <a href="#home" class="header-logo">
                     <img src="images/Qlogo.png" alt="Queen-Dev." />
-                 </a>
+                 </a> Queen-Dev.
                 <!-- End Header Logo -->
             </div>
             <!--Start Header Menu-->
             <ul class="header-nav">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
+                <li><a href="#Projects">Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <!--End Header Menu-->
-            <div class="logo">
-                <div class="header-btn-link text-end">
-                   <a href="#contant" class="btn btn-sm btn-outline-one icon-space-left">Hire Me <i class="icofont-double-right"></i></a>
-                </div>
-            </div>              
+            <div class="header-btn-link">
+                <a href="#contact" class="btn">Hire Me</a>
+            </div>             
         </div>
         <!--Start Home section-->
         <div class="home-section">
@@ -41,7 +40,7 @@
                     <h2 class="home-names">Queen <span class="shape-mark">WIHOGORA</span></h2>
                     <p><font size="+3"><br>Software Engineer, Front end & </br>App Developer.</font></p>
 
-                    <a href="resume/Queen CV.pdf" alt="CV" target="_blank"> Get Resume  <i class="icofont-download"></i></a>
+                    <a href="resume/Queen CV.pdf" class="btn" alt="CV" target="_blank"> Get Resume </a>
                 </div>
                 <div class="home-portrait">
                     <div class="image">
@@ -59,7 +58,7 @@
 
                    I enjoy developing applications that meld creativity with function. </font></p>
                 <br> <font size="+2">
-                    <a href="resume/Queen CV.pdf" alt="CV" target="_blank"> Get Resume 
+                    <a href="resume/Queen CV.pdf" class="btn" alt="CV" target="_blank"> Get Resume</a>
                     </font></br>
             </div>
         </div>
@@ -67,38 +66,44 @@
         <!--Start Projects section-->
         <div class="project-section">
             <div class="project-wrapper">
-                <div class="project-title"></div>
-                <h1>My Work</h1>
-                <p>A collection of projects I've worked on.</p>  
+                <div class="project-title">
+                    <h1>My <br> Work </br></h1>
+                    <p>A collection of projects I've worked on.</p>  
+                </div>
+                <div class="row">
+                    <div class="project-card">
+                        <h2>Farm Management System (FMS)</h2>
+                        <p>The FMS allows farmers to record and manage their farm expenses and crops through a simple command-line interface.</p>
+                        <img src="images/fms.jpg" alt="FMS Project" width="350"/>
+                        <a href="#https://github.com/Q-Reine/fms-python.git" class="github-link">
+                            <img src="images/github-logo.png" alt="GitHub">
+                        </a>
+                    </div>
+                    <div class="project-card">
+                        <h2>Our Mission</h2>
+                        <p>The Go Link platform is an inclusive job-matching platform that empowers individuals across Africa, especially young people, by bridging employment gaps, offering skills training, and fostering economic independence through accessible technology.</p>
+                        <img src="images/golink.jpg" alt="GoLink Project" width="350">
+                        <a href="https://github.com/Q-Reine/golink-platform.git" class="github-link">
+                            <img src="images/github-logo.png" alt="GitHub">
+                        </a>
+                    </div>
+                    <div class="project-card">
+                        <h2>Job Application Form Objective</h2>
+                        <p>This project is a collaborative effort to create a single web page featuring a job application form.</p>
+                        <img src="images/job application form.jpg" alt="Job Application Form Project" width="300">
+                        <a href="https://github.com/Q-Reine/summative_assessment_one_group16.git" class="github-link">
+                            <img src="images/github-logo.png" alt="GitHub">
+                        </a>
+                    </div>
+                </div>                
             </div>
-            <div class="project-card">
-                <h2>Farm Management System (FMS)</h2>
-                <p>The FMS allows farmers to record and manage their farm expenses and crops through a simple command-line interface.</p>
-                <a href="#" class="github-link">
-                    <img src="github-icon.png" alt="GitHub">
-                </a>
-            </div>
-            <div class="project-card">
-                <h2>Our Mission</h2>
-                <p>The Go Link platform is an inclusive job-matching platform that empowers individuals across Africa, especially young people, by bridging employment gaps, offering skills training, and fostering economic independence through accessible technology.</p>
-                <a href="#" class="github-link">
-                    <img src="github-icon.png" alt="GitHub">
-                </a>
-            </div>
-            <div class="project-card">
-                <h2>Job Application Form Objective</h2>
-                <p>This project is a collaborative effort to create a single web page featuring a job application form.</p>
-                <a href="#" class="github-link">
-                    <img src="github-icon.png" alt="GitHub">
-                </a>
-            </div>
-        </div>
+
         <!--End Projects section-->
         <!--Start Skills section-->
         <div class="skills-section">
             <div class="skills-wrapper">
                 <div class="skills-content">
-                    <h1 class="title">MY SKILLS</h1>
+                    <h1 class="title">SKILLS</h1>
                 <div class="skills">
                 <div class="skill">
                     <span>HTML</span>
@@ -134,13 +139,6 @@
                         <div class="progress" style="width: 95%;"></div>
                     </div>
                     <span class="percentage">85%</span>
-                </div>
-                <div class="skill">
-                    <span>Sony Vegas</span>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 90%;"></div>
-                    </div>
-                    <span class="percentage">90%</span>
                 </div>
             </div>
         </div>
