--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <!-- Start Header section-->
-        <div class="header-wrapper">
+        <div class="header-wrapper"> 
             <div class="logo">
                 <!-- Start Header Logo -->
                  <a href="#home" class="header-logo">
@@ -33,7 +33,7 @@
             </div>             
         </div>
         <!--Start Home section-->
-        <div class="home-section">
+        <div id ="home" class="home-section">
             <div class="home-wrapper">
                 <div class="home-content">
                     <h3 class="home-title">Hello! I’m</h3>
@@ -50,7 +50,7 @@
             </div>
         </div>
         <!-- Start About Section-->
-        <div class="about-section">
+        <div id="about" class="about-section">
             <div class="about-wrapper">
                 <h2 class="about-title">about.</h2>
                 <div class="about-content">Hello! I am Queen,</div>
@@ -64,7 +64,7 @@
         </div>
         <!--End about section-->
         <!--Start Projects section-->
-        <div class="project-section">
+        <div id ="Projects" class="project-section">
             <div class="project-wrapper">
                 <div class="project-title">
                     <h1>My <br> Work </br></h1>
@@ -97,65 +97,64 @@
                     </div>
                 </div>                
             </div>
-
         <!--End Projects section-->
         <!--Start Skills section-->
-        <div class="skills-section">
+        <div id="skills" class="skills-section">
             <div class="skills-wrapper">
+                <h1 class="title">SKILLS</h1>
                 <div class="skills-content">
-                    <h1 class="title">SKILLS</h1>
-                <div class="skills">
-                <div class="skill">
-                    <span>HTML</span>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 95%;"></div>
+                    <div class="skill">
+                        <span>HTML</span>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 95%;"></div>
+                        </div>
+                        <span class="percentage">95%</span>
                     </div>
-                    <span class="percentage">95%</span>
-                </div>
-                <div class="skill">
-                    <span>JavaScript</span>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 75%;"></div>
+                    <div class="skill">
+                        <span>JavaScript</span>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 75%;"></div>
+                        </div>
+                        <span class="percentage">70%</span>
                     </div>
-                    <span class="percentage">70%</span>
-                </div>
-                <div class="skill">
-                    <span>Figma</span>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 85%;"></div>
+                    <div class="skill">
+                        <span>Figma</span>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 85%;"></div>
+                        </div>
+                        <span class="percentage">85%</span>
                     </div>
-                    <span class="percentage">85%</span>
-                </div>
-                <div class="skill">
-                    <span>CSS</span>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 70%;"></div>
+                    <div class="skill">
+                        <span>CSS</span>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 70%;"></div>
+                        </div>
+                        <span class="percentage">70%</span>
                     </div>
-                    <span class="percentage">70%</span>
-                </div>
-                <div class="skill">
-                    <span>Python</span>
-                    <div class="progress-bar">
-                        <div class="progress" style="width: 95%;"></div>
+                    <div class="skill">
+                        <span>Python</span>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 95%;"></div>
+                        </div>
+                        <span class="percentage">85%</span>
                     </div>
-                    <span class="percentage">85%</span>
                 </div>
             </div>
         </div>
         <!--End Skills section-->
         <!--Start contact section-->
-        <div class="contact-section">
+        <div id= "contact" class="contact-section">
             <div class="contact-left">
                 <h2>Let's get in touch!</h2>
                 <p>
                     I'd love the opportunity to connect with you. You can get in touch with me through email with the form below or by sending me a message through my social media platforms.
                 </p>
                 <div class="social-links">
-                    <a href="#" class="social-icon">
-                        <img src="github-icon.png" alt="GitHub">
+                    <a href="https://github.com/Q-Reine" class="social-icon">
+                        <img src="images/git4.png" alt="GitHub">
                     </a>
-                    <a href="#" class="social-icon">
-                        <img src="linkedin-icon.png" alt="LinkedIn">
+                    <a href="www.linkedin.com/in/ keilla-queen-584987144" class="social-icon">
+                        <img src="images/linkedIn-logo.png" alt="LinkedIn">
                     </a>
                 </div>
             </div>
