--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -54,7 +54,7 @@
             <div class="about-wrapper">
                 <h2 class="about-title">about.</h2>
                 <div class="about-content">Hello! I am Queen,</div>
-                <p> <font size="+4"> A passionate software developer<span class="developer"></span> with a flair for designing elegant and user-friendly solutions from complex ideas.
+                <p> <font size="+3"> A passionate software developer<span class="developer"></span> with a flair for designing elegant and user-friendly solutions from complex ideas.
 
                    I enjoy developing applications that meld creativity with function. </font></p>
                 <br> <font size="+2">
@@ -174,5 +174,10 @@
             </div>
         </div>
         <!-- End Contact section-->
+        <!-- Starts Footer section-->
+        <footer>
+            <p>&copy; Copyright 2025. All rights reserved by Queen-Dev.</p>
+        </footer>
+        <!--Ends Footer section-->
     </body>
 </html>
