--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="home-wrapper">
                 <div class="home-content">
                     <h3 class="home-title">Hello! I’m</h3>
-                    <h2 class="home-names">Queen <span class="shape-mark">WIHOGORA</span></h2>
+                    <h2 class="home-names">Queen WIHOGORA</h2>
                     <p><font size="+3"><br>Software Engineer, Front end & </br>App Developer.</font></p>
 
                     <a href="resume/Queen CV.pdf" class="btn" alt="CV" target="_blank"> Get Resume </a>
@@ -54,7 +54,7 @@
             <div class="about-wrapper">
                 <h2 class="about-title">about.</h2>
                 <div class="about-content">Hello! I am Queen,</div>
-                <p> <font size="+3"> A passionate software developer<span class="developer"></span> with a flair for designing elegant and user-friendly solutions from complex ideas.
+                <p> <font size="+3"> A passionate software developer with a flair for designing elegant and user-friendly solutions from complex ideas.
 
                    I enjoy developing applications that meld creativity with function. </font></p>
                 <br> <font size="+2">
@@ -75,7 +75,7 @@
                         <h2>Farm Management System (FMS)</h2>
                         <p>The FMS allows farmers to record and manage their farm expenses and crops through a simple command-line interface.</p>
                         <img src="images/fms.jpg" alt="FMS Project" width="350"/>
-                        <a href="#https://github.com/Q-Reine/fms-python.git" class="github-link">
+                        <a href="https://github.com/Q-Reine/fms-python.git" class="github-link" target="_blank">
                             <img src="images/github-logo.png" alt="GitHub">
                         </a>
                     </div>
@@ -83,7 +83,7 @@
                         <h2>Our Mission</h2>
                         <p>The Go Link platform is an inclusive job-matching platform that empowers individuals across Africa, especially young people, by bridging employment gaps, offering skills training, and fostering economic independence through accessible technology.</p>
                         <img src="images/golink.jpg" alt="GoLink Project" width="350">
-                        <a href="https://github.com/Q-Reine/golink-platform.git" class="github-link">
+                        <a href="https://github.com/Q-Reine/golink-platform.git" class="github-link" target="_blank">
                             <img src="images/github-logo.png" alt="GitHub">
                         </a>
                     </div>
@@ -91,7 +91,7 @@
                         <h2>Job Application Form Objective</h2>
                         <p>This project is a collaborative effort to create a single web page featuring a job application form.</p>
                         <img src="images/job application form.jpg" alt="Job Application Form Project" width="300">
-                        <a href="https://github.com/Q-Reine/summative_assessment_one_group16.git" class="github-link">
+                        <a href="https://github.com/Q-Reine/summative_assessment_one_group16.git" class="github-link" target="_blank">
                             <img src="images/github-logo.png" alt="GitHub">
                         </a>
                     </div>
