--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         </title>
     </head>
     <body>
+        <div class="menu-toggle">☰
         <!-- Start Header section-->
         <div class="header-wrapper"> 
             <div class="logo">
@@ -30,7 +31,8 @@
             <!--End Header Menu-->
             <div class="header-btn-link">
                 <a href="#contact" class="btn">Hire Me</a>
-            </div>             
+            </div> 
+        </div>            
         </div>
         <!--Start Home section-->
         <div id ="home" class="home-section">
